--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1"
+    "mercadopago": "^1.5.17",
+    "mongoose": "^7.3.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
